--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'word1234'
+            storeFile file("$rootDir/keystore.jks")
+            storePassword 'word1234'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.efhems.newinsideproject"
@@ -15,43 +23,38 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
-
     implementation 'com.google.firebase:firebase-database:16.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     // CardView Dependency
     implementation 'com.android.support:cardview-v7:28.0.0'
-
     // Room components
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+    androidTestImplementation 'android.arch.persistence.room:testing:1.1.1'
     // Lifecycle components
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-
     //gson
     implementation 'com.google.code.gson:gson:2.8.2'
-
     implementation 'com.facebook.stetho:stetho:1.3.1'
-    implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1' // for OkHttp library
-
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    // for OkHttp library
     //workmanager
-    implementation "android.arch.work:work-runtime:1.0.0-rc02"
-
+    implementation 'android.arch.work:work-runtime:1.0.0-rc02'
     //firebase auth
     implementation 'com.google.firebase:firebase-auth:16.2.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
